--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -45,15 +45,14 @@ const visibleSegments = pathSegments.slice(-2)
     ]}
     customizeNav={{
       'aria-label': ariaLabel,
-    }}
-  >
-    <span slot='separator' aria-hidden='true' class='text-base-content'>
+    }}>
+    <span slot='separator' aria-hidden='true' class='text-theme-content'>
       /
     </span>
     <span slot='index' class='inline-flex items-center'>
       <Icon
         name='lucide:house'
-        class='stroke-[5] text-base-content decoration-primary/50 transition-all duration-200 hover:text-primary hover:underline hover:decoration-2'
+        class='stroke-[5] text-theme-content decoration-theme-primary/50 transition-all duration-200 hover:text-theme-primary hover:underline hover:decoration-2'
         size='0.85rem'
         aria-hidden='true'
       />
@@ -79,26 +78,26 @@ const visibleSegments = pathSegments.slice(-2)
 
 <style>
   :global(.c-breadcrumbs) {
-    @apply text-xs text-base-content;
+    @apply text-xs text-theme-content;
   }
 
   :global(.c-breadcrumbs__link) {
-    @apply relative text-base-content underline decoration-primary/50 decoration-2 transition-colors duration-200 hover:text-primary;
+    @apply relative text-theme-content underline decoration-theme-primary/50 decoration-2 transition-colors duration-200 hover:text-theme-primary;
   }
 
   :global(.c-breadcrumbs__link) {
-    @apply after:absolute after:bottom-0 after:left-0 after:h-px after:w-full after:bg-primary after:opacity-0 after:transition-opacity after:duration-200;
+    @apply after:absolute after:bottom-0 after:left-0 after:h-px after:w-full after:bg-theme-primary after:opacity-0 after:transition-opacity after:duration-200;
   }
 
   :global(.c-breadcrumbs__link:hover) {
-    @apply text-primary after:opacity-100;
+    @apply text-theme-primary after:opacity-100;
   }
 
   :global(.c-breadcrumbs__crumb:last-child) {
-    @apply text-base-content;
+    @apply text-theme-content;
   }
 
   :global(.c-breadcrumbs__truncated-button) {
-    @apply transition-colors duration-200 hover:text-primary;
+    @apply transition-colors duration-200 hover:text-theme-primary;
   }
 </style>
