--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -125,9 +125,9 @@ const isExternal =
     'inline-flex items-center gap-2',
     'transition-colors duration-300 ease-in-out',
     underline ?
-      'underline decoration-primary/65 underline-offset-2 hover:decoration-primary'
+      'underline decoration-theme-primary/65 underline-offset-2 hover:decoration-theme-primary'
     : 'no-underline',
-    'hover:text-primary',
+    'hover:text-theme-primary',
     className,
   )}
   {...itemprop ? { itemprop } : {}}
