--- a/src/components/content/ContentVideo.astro
+++ b/src/components/content/ContentVideo.astro
@@ -145,7 +145,7 @@ const { width, scale } = PRESET_SIZES[size]
     </div>
     {
       title && (
-        <figcaption class='-mb-3 mt-2 text-center text-sm italic text-base-content/75'>
+        <figcaption class='-mb-3 mt-2 text-center text-sm italic text-theme-content/75'>
           {enableFullResLink && publicUrl ?
             <Link
               href={publicUrl}
