--- a/src/components/content/ContentYoutube.astro
+++ b/src/components/content/ContentYoutube.astro
@@ -64,6 +64,6 @@ const {
   }
 
   .custom-video-card-caption {
-    @apply prose-sm mt-2 text-center italic text-base-content;
+    @apply prose-sm mt-2 text-center italic text-theme-content;
   }
 </style>
