--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -41,7 +41,11 @@ const titleTemplate = site.titleTemplate
 ---
 
 <!doctype html>
-<html lang='en' data-theme='laramie' transition:persist='theme'>
+<html
+  lang='en'
+  data-theme='laramie'
+  transition:persist='theme'
+  class='bg-theme-base text-theme-content'>
   <Head>
     <!-- global meta -->
     <BaseHead />
