--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -13,14 +13,14 @@ import { Icon } from 'astro-icon/components'
     class='relative flex flex-col items-center justify-center gap-y-8 pt-12 text-center'>
     <div class='relative flex items-center justify-center'>
       <p
-        class='font-brand !text-[12rem] !font-bold !text-base-content/25'
+        class='font-brand !text-[12rem] !font-bold !text-theme-content/25'
         style='font-size: 12rem !important; line-height: 1 !important; color: oklch(var(--n))'>
         404
       </p>
       <Icon
         name='octangula'
         size='10rem'
-        class='error-icon absolute z-10 text-primary'
+        class='error-icon absolute z-10 text-theme-primary'
       />
     </div>
 
