--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -53,7 +53,7 @@ const isSubHeader = ['h3', 'h4', 'h5', 'h6'].includes(headingLevel)
     (() => {
       const metadataContent =
         isPost && publishDate ?
-          <div class='flex items-center gap-1.5 text-sm text-base-content/70'>
+          <div class='flex items-center gap-1.5 text-sm text-theme-content-weak'>
             <Date date={publishDate} />
 
             {updatedDate && (
@@ -80,7 +80,7 @@ const isSubHeader = ['h3', 'h4', 'h5', 'h6'].includes(headingLevel)
             )}
           </div>
         : metadata.length > 0 ?
-          <div class='flex flex-wrap items-center gap-3 text-sm text-base-content/70'>
+          <div class='flex flex-wrap items-center gap-3 text-sm'>
             {metadata.map((item, i) => (
               <>
                 {i > 0 && (
@@ -89,15 +89,15 @@ const isSubHeader = ['h3', 'h4', 'h5', 'h6'].includes(headingLevel)
                   </span>
                 )}
                 <div class='flex items-center gap-1.5'>
-                  <span class='opacity-70'>{item.label}:</span>
+                  <span class='text-theme-secondary'>{item.label}:</span>
                   {item.url ?
                     <Link
                       href={item.url}
-                      class='hover:text-primary'
+                      class='text-theme-content-weak hover:text-theme-primary'
                       underline={false}>
                       {item.value}
                     </Link>
-                  : <span>{item.value}</span>}
+                  : <span class='text-theme-content-weak'>{item.value}</span>}
                 </div>
               </>
             ))}
@@ -167,7 +167,9 @@ const isSubHeader = ['h3', 'h4', 'h5', 'h6'].includes(headingLevel)
             </div>
           }
 
-          {subtitle && <p class='text-sm text-base-content/70'>{subtitle}</p>}
+          {subtitle && (
+            <p class='text-sm text-theme-content-weak'>{subtitle}</p>
+          )}
 
           {metadataPosition === 'bottom' && metadataContent}
 
