--- a/src/components/content/ContentDiscordMessage.astro
+++ b/src/components/content/ContentDiscordMessage.astro
@@ -39,16 +39,18 @@ function formatDate(dateString: string) {
   </div>
   <div class='message-content'>
     <div class='message-header'>
-      <strong class='author'>{author}</strong>
+      <span class='author font-semibold text-theme-content-strong'
+        >{author}</span
+      >
       {
         date && (
-          <time class='date' datetime={formatDate(date)}>
+          <time class='date text-theme-secondary' datetime={formatDate(date)}>
             {date}
           </time>
         )
       }
     </div>
-    <div class='message-blocks'>
+    <div class='message-blocks prose text-theme-content'>
       {
         content.map((item) => (
           <div class='content'>
@@ -102,14 +104,12 @@ function formatDate(dateString: string) {
     margin-bottom: 2px;
   }
   .author {
-    font-weight: bold;
     font-size: 1rem;
     line-height: 1.375rem;
     margin-right: 0.25rem;
   }
   .date {
     font-size: 0.75rem;
-    font-weight: 500;
   }
   .message-blocks {
     display: flex;
@@ -126,9 +126,5 @@ function formatDate(dateString: string) {
     color: oklch(var(--p));
     border-radius: 3px;
     padding: 0 2px;
-    font-weight: 500;
-  }
-  .discord-message:hover .mention {
-    background-color: oklch(var(--p) / 0.3);
   }
 </style>
