--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,6 +23,7 @@ const navItems = getNavItems()
         title={`${site.name} - Return to homepage`}
         externalInNewTab={false}
         underline={false}
+        prefetch={true}
         aria-label={`${site.name} - Return to homepage`}
         class='title flex items-center text-theme-content transition-colors duration-150 hover:text-theme-primary'>
         <svg
