--- a/src/components/content/ContentDiscordMessage.astro
+++ b/src/components/content/ContentDiscordMessage.astro
@@ -1,6 +1,6 @@
 ---
 import type { JSX } from 'astro/jsx-runtime'
-import { Image } from 'astro:assets'
+import ContentImage from '@/components/content/ContentImage.astro'
 
 interface Props {
   author: string
@@ -29,12 +29,15 @@ function formatDate(dateString: string) {
   role='listitem'
   aria-label={`Discord message from ${author}`}>
   <div class='avatar-wrapper' role='img' aria-label={`${author}'s avatar`}>
-    <Image
+    <ContentImage
       src={avatar}
       alt={`${author}'s avatar`}
-      width={48}
-      height={48}
-      class='avatar'
+      size='sm'
+      style={false}
+      class='avatar !m-0'
+      imageClass='w-full h-full object-cover rounded-full'
+      captionType='hidden'
+      enableFullResLink={false}
     />
   </div>
   <div class='message-content'>
@@ -76,27 +79,26 @@ function formatDate(dateString: string) {
     display: flex;
     align-items: flex-start;
     transition: background-color 0.2s ease;
-    padding-top: 32px;
+    padding-top: 1rem;
     position: relative;
   }
   .avatar-wrapper {
-    width: 48px;
-    height: 48px;
+    width: 42px;
+    height: 42px;
     position: absolute;
-    top: 0.6rem;
-    left: 0.25rem;
+    top: 0.7rem;
+    left: 0;
+    overflow: hidden;
   }
   .avatar {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
   }
   .message-content {
     flex: 1;
     display: flex;
     flex-direction: column;
-    margin-left: 58px;
+    margin-left: 48px;
   }
   .message-header {
     display: flex;
