fix: last edited message

--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -58,7 +58,7 @@ const isSubHeader = ['h3', 'h4', 'h5', 'h6'].includes(headingLevel)
 
             {updatedDate && (
               <>
-                <span aria-hidden='true'>&bull;</span>
+                <span aria-hidden='true'>&bull; last edited</span>
                 <Date date={updatedDate} format='relative' />
               </>
             )}
